Fix overflow bug

--- a/src/sass/layouts/dashboard.scss
+++ b/src/sass/layouts/dashboard.scss
@@ -40,7 +40,7 @@
 
     .side-content {
         flex-grow: 1;
-        overflow: scroll;
+        overflow: auto;
         flex-direction: column;
     }
 
